# RustJanus

./: .gitignore  Cargo.toml  README.md  test-manifest.json  test_regex.rs  version.txt
.ws/: state.json
benches/: performance_benchmarks.rs
examples/: simple_client.rs  simple_server.rs  test_server.rs
src/: lib.rs
src/config/: client_config.rs  mod.rs
src/core/: connection_pool.rs  janus_client.rs  message_framing.rs  mod.rs  security_validator.rs  unix_datagram_client.rs  unix_socket_client.rs
src/error/: api_error.rs  jsonrpc_error.rs  mod.rs  socket_error.rs
src/manifest/: argument_validator.rs  manifest_parser.rs  mod.rs  model_registry.rs  response_validator.rs  validation_engine.rs
src/protocol/: command_handler.rs  janus_client.rs  janus_datagram_client.rs  message_framing.rs  message_framing.rs.backup  message_types.rs  mod.rs  request_handler.rs  response_tracker.rs  timeout_manager.rs  unix_sock_api_client.rs  unix_sock_api_datagram_client.rs
src/server/: datagram_server.rs  janus_server.rs  mod.rs
src/specification/: api_spec_parser.rs  manifest_parser.rs  mod.rs  model_registry.rs  response_validator.rs
src/utils/: json_utils.rs  mod.rs  path_utils.rs  uuid_utils.rs
tests/: advanced_client_features_tests.rs  api_spec_logging_tests.rs  api_specification_parser_tests.rs  automatic_id_management_tests.rs  basic_functionality.rs  builtin_commands_tests.rs  builtin_requests_tests.rs  command_handler_tests.rs  concurrency_tests.rs  connection_state_tests.rs  dynamic_manifest_architecture_tests.rs  dynamic_specification_architecture_tests.rs  edge_cases_tests.rs  high_level_api_tests.rs  janus_client_tests.rs  manifest_logging_tests.rs  manifest_parser_tests.rs  message_framing_tests.rs  network_failure_tests.rs  protocol_tests.rs  request_handler_tests.rs  reserved_command_architecture_tests.rs  reserved_request_architecture_tests.rs  response_validation_tests.rs  security_tests.rs  server_features_tests.rs  socket_address_tests.rs  stateless_communication_tests.rs  test_utils.rs  timeout_management_advanced_tests.rs  timeout_tests.rs  unix_sock_api_client_tests.rs
