[package]
name = "RustUnixSockAPI"
version = "2.0.0"
edition = "2021"
authors = ["Bahram Joharshamshiri"]
description = "Enterprise-grade Unix domain socket API communication library (SwiftUnixSockAPI parity)"
license = "MIT"
repository = "https://github.com/jowharshamshiri/RustUnixSockAPI"
keywords = ["unix", "socket", "ipc", "api", "security"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for validation
regex = "1.0"

# Logging
log = "0.4"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
tokio-test = "0.4"
futures = "0.3"
base64 = "0.22"

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test environment
env_logger = "0.10"

[lib]
name = "rust_unix_sock_api"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "examples/simple_server.rs"

[[bin]]
name = "client"
path = "examples/simple_client.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = []
yaml-support = ["serde_yaml"]
resource-monitoring = []