[package]
name = "RustUnixSockAPI"
version = "2.0.0"
edition = "2021"
authors = ["Bahram Joharshamshiri"]
description = "Enterprise-grade Unix domain socket API communication library (SwiftUnixSockAPI parity)"
license = "MIT"
repository = "https://github.com/jowharshamshiri/RustUnixSockAPI"
keywords = ["unix", "socket", "ipc", "api", "security"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for validation
regex = "1.0"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
# Testing utilities
tempfile = "3.0"
tokio-test = "0.4"
futures = "0.3"
base64 = "0.22"

# Performance benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test environment

[lib]
name = "rust_unix_sock_api"
path = "src/lib.rs"

[[bin]]
name = "unixsock-dgram"
path = "src/bin/unixsock-dgram.rs"
required-features = []

[[bench]]
name = "performance_benchmarks"
harness = false

[features]
default = []
yaml-support = ["serde_yaml"]
resource-monitoring = []