[[bench]]
harness = false
name = "performance_benchmarks"

[[bin]]
name = "janus"
path = "src/bin/janus.rs"
required-features = []

[dependencies]
async-trait = "0.1"
env_logger = "0.10"
log = "0.4"
regex = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.clap]
features = ["derive"]
version = "4.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.serde_yaml]
optional = true
version = "0.9"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.uuid]
features = ["v4"]
version = "1.0"

[dev-dependencies]
base64 = "0.22"
futures = "0.3"
tempfile = "3.0"
tokio-test = "0.4"

[dev-dependencies.criterion]
features = ["html_reports"]
version = "0.5"

[features]
default = []
resource-monitoring = []
yaml-support = ["serde_yaml"]

[lib]
name = "rust_janus"
path = "src/lib.rs"

[package]
authors = ["Bahram Joharshamshiri"]
categories = ["network-programming", "os::unix-apis", "api-bindings"]
description = "Enterprise-grade Unix domain socket API communication library (SwiftJanus parity)"
edition = "2021"
keywords = ["unix", "socket", "ipc", "api", "security"]
license = "MIT"
name = "RustJanus"
repository = "https://github.com/jowharshamshiri/RustJanus"
version = "0.37.31427"
